# FastPyNUTS

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  benchmark.ipynb  pyproject.toml  requirements.py  requirements.txt  requirements_build.txt  setup.py
.github/workflows/: readthedocs.yml  run-tests.yml  sphinx.yml
docs/: requirements.txt
docs/source/: benchmark.rst  conf.py  index.rst  overview.rst
docs/source/myapidocs/fastpynuts/: fastpynuts.download.md  fastpynuts.experimental.md  fastpynuts.fastpynuts.md  fastpynuts.md  fastpynuts.utils.md  submodules.md
fastpynuts/: __init__.py  download.py  experimental.py  fastpynuts.py  utils.py
tests/: fixtures.py  test_benchmark.py  test_download.py  test_finder.py  test_poly.py  test_region.py  test_url.py  utils.py
tests/data/: benchmark_points_1000_scale_10_outside.geojson  benchmark_points_1000_scale_1_outside.geojson  benchmark_points_1000_scale_20_outside.geojson  benchmark_points_1000_scale_3_outside.geojson  benchmark_points_1000_scale_60_outside.geojson
